# csv-scavenger

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
csv-scavenger/: __init__.py  alternative.py  scavenger.py
csv-scavenger/example_csvs/: faithful.csv  health.csv  multimeter copy.csv  orgs copy.csv  orgs.csv  orgs_copy.csv  people.csv
simplecsv/: main.py
simplecsv/example_csvs/: bla.csv  faithful.csv  multimeter.csv  not_data.csv  orgs.csv  other.csv  people.csv
tests/: test_scavenger.py
