[tool.poetry]
name = "csv-scavenger"
version = "1.0.1"
description = "CSV reader and parser with automatic detection of delimiter and start/end of data."
authors = ["Gustave Coulombe <magikgus@gmail.com>"]
readme = "README.md"
packages = [{include = "scavenger.py", from = "csv-scavenger"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.0.0"
tssplit = "^1.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
